# UtaLab

./: .prettierignore  CLAUDE.md  README.md  devbox.json  main.py  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: ci.yml
docs/: commands.md  handover.md  mvp-roadmap.md  overview.md  setup.md  structure.md
lookingback/: pitchy.md
public/analyzed/28f7b565-a14e-4920-b7f5-bcfaf39c556a/: melody.json
public/analyzed/9c0e649e-242b-4765-8885-c24e093cbdb6/: melody.json
public/analyzed/a85f5f47-903c-4b92-9cbd-8541910073a5/: melody.json
public/analyzed/ece5df80-29cb-426c-a5e3-3697680d2918/: melody.json
public/analyzed/test-001/: melody.json
public/samples/: sample-001.melody.json
public/worklets/: pitch-detector.worklet.js  pitchy.js
src/app/: globals.css  page.tsx
src/app/api/analyze/: route.ts
src/app/api/scores/: route.ts
src/app/karaoke/[id]/: page.tsx
src/app/result/: page.tsx
src/app/songs/: page.tsx
src/app/test/: page.tsx
src/app/upload/: page.tsx
src/components/layouts/: page-header.tsx
src/db/: index.ts  schema.ts
src/features/karaoke/audio/: accompaniment-player.ts  pitch-detector.ts
src/features/karaoke/components/: pitch-canvas.tsx
src/features/karaoke/hooks/: use-karaoke-session.ts  use-pitch-detector.ts  use-scoring.ts
src/features/karaoke/repositories/: api-score-repository.ts  local-storage-score-repository.ts  score-repository.ts
src/features/karaoke/scoring/: types.ts
worker/: analyze.py  pyproject.toml
(+2 files in other folders)
