[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "demucs>=4.0.1",
    "librosa>=0.11.0",
    "numpy>=2.4.4",
    "soundfile>=0.13.1",
    "tensorflow>=2.21.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchcodec>=0.11.1",
]
